--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
 }
 
 #codeText {
-    white-space: pre;
+    white-space: pre-wrap;
     color: lawngreen;
 }
 
@@ -65,7 +65,7 @@ body {
 
 #tabs::-webkit-scrollbar {
     background: none;
-    height: 0.25vh;
+    height: 0.5vh;
 }
 
 #tabs::-webkit-scrollbar-thumb {
@@ -77,6 +77,7 @@ body {
 }
 
 .bigtabs {
+    background-color: rgb(20, 20, 27);
     border: 0;
     border-top-right-radius: 1vw;
     border-bottom-right-radius: 1vw;
@@ -99,6 +100,7 @@ body {
     text-align: center;
     color: lightgrey;
     background-color: black;
+    height: 5vw;
 }
 
 #stopAudioButton{
